fix(home): fix font weight in graph for readability

--- a/src/App.css
+++ b/src/App.css
@@ -158,7 +158,7 @@
   align-items: center;
   justify-content: center;
   width: fit-content;
-
+  font-weight: 400;
 }
 
 .gist-card#icons {
